# github-release-generator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-docker-image.yml
src/: main.rs
