[package]
name = "github-release-generator"
version = "0.2.0"
edition = "2024"

[dependencies]
git2 = "0.21.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1.0.95"
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
